// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should matches with closeButton snapshot 1`] = `
<div
  className="sc-gsDKAQ ibWFdp k-Alert k-Alert--undefined k-Alert--hasCloseButton k-Alert--hasIcon"
  role={null}
>
  <span
    className="sc-bdvvtL wpCaS k-IconBadge k-Alert__iconBadge k-IconBadge--medium k-IconBadge--info"
    style={
      Object {
        "--iconBadge-background-color": null,
        "--iconBadge-border-color": null,
        "--iconBadge-border-style": null,
        "--iconBadge-border-width": null,
      }
    }
  >
    <svg
      fill="var(--color-grey-900)"
      height="14"
      viewBox="0 0 4 14"
      width="4"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="2"
        cy="1.25"
        r="1.25"
        transform="rotate(-180 2 1.25)"
      />
      <rect
        height="9"
        rx="1.25"
        transform="rotate(-180 3.25 13.5)"
        width="2.5"
        x="3.25"
        y="13.5"
      />
    </svg>
  </span>
  <div
    className="k-Alert__text"
  >
    Alert !
  </div>
  <button
    aria-label="Close"
    className="k-Alert__closeButton k-u-reset-button"
    onClick={[Function]}
    title="Close"
  >
    <svg
      fill="none"
      height="18"
      viewBox="0 0 17 18"
      width="17"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
        fill="var(--color-grey-900, #222)"
      />
    </svg>
  </button>
</div>
`;

exports[`<Alert /> should matches with danger snapshot 1`] = `
<div
  className="sc-gsDKAQ ibWFdp k-Alert k-Alert--undefined k-Alert--danger k-Alert--hasIcon"
  role={null}
>
  <span
    className="sc-bdvvtL wpCaS k-IconBadge k-Alert__iconBadge k-IconBadge--medium k-IconBadge--danger"
    style={
      Object {
        "--iconBadge-background-color": null,
        "--iconBadge-border-color": null,
        "--iconBadge-border-style": null,
        "--iconBadge-border-width": null,
      }
    }
  >
    <svg
      fill="var(--color-grey-900)"
      height="14"
      viewBox="0 0 4 14"
      width="4"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="2"
        cy="1.25"
        r="1.25"
        transform="rotate(-180 2 1.25)"
      />
      <rect
        height="9"
        rx="1.25"
        transform="rotate(-180 3.25 13.5)"
        width="2.5"
        x="3.25"
        y="13.5"
      />
    </svg>
  </span>
  <div
    className="k-Alert__text"
  >
    Alert !
  </div>
</div>
`;

exports[`<Alert /> should matches with default snapshot 1`] = `
<div
  className="sc-gsDKAQ ibWFdp k-Alert k-Alert--undefined k-Alert--hasIcon"
  role={null}
>
  <span
    className="sc-bdvvtL wpCaS k-IconBadge k-Alert__iconBadge k-IconBadge--medium k-IconBadge--info"
    style={
      Object {
        "--iconBadge-background-color": null,
        "--iconBadge-border-color": null,
        "--iconBadge-border-style": null,
        "--iconBadge-border-width": null,
      }
    }
  >
    <svg
      fill="var(--color-grey-900)"
      height="14"
      viewBox="0 0 4 14"
      width="4"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="2"
        cy="1.25"
        r="1.25"
        transform="rotate(-180 2 1.25)"
      />
      <rect
        height="9"
        rx="1.25"
        transform="rotate(-180 3.25 13.5)"
        width="2.5"
        x="3.25"
        y="13.5"
      />
    </svg>
  </span>
  <div
    className="k-Alert__text"
  >
    Alert !
  </div>
</div>
`;

exports[`<Alert /> should matches with success snapshot 1`] = `
<div
  className="sc-gsDKAQ ibWFdp k-Alert k-Alert--undefined k-Alert--success k-Alert--hasIcon"
  role={null}
>
  <span
    className="sc-bdvvtL wpCaS k-IconBadge k-Alert__iconBadge k-IconBadge--medium k-IconBadge--success"
    style={
      Object {
        "--iconBadge-background-color": null,
        "--iconBadge-border-color": null,
        "--iconBadge-border-style": null,
        "--iconBadge-border-width": null,
      }
    }
  >
    <svg
      fill="var(--color-grey-900)"
      height="14"
      viewBox="0 0 4 14"
      width="4"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="2"
        cy="1.25"
        r="1.25"
        transform="rotate(-180 2 1.25)"
      />
      <rect
        height="9"
        rx="1.25"
        transform="rotate(-180 3.25 13.5)"
        width="2.5"
        x="3.25"
        y="13.5"
      />
    </svg>
  </span>
  <div
    className="k-Alert__text"
  >
    Alert !
  </div>
</div>
`;

exports[`<Alert /> should matches with warning snapshot 1`] = `
<div
  className="sc-gsDKAQ ibWFdp k-Alert k-Alert--undefined k-Alert--warning k-Alert--hasIcon"
  role={null}
>
  <span
    className="sc-bdvvtL wpCaS k-IconBadge k-Alert__iconBadge k-IconBadge--medium k-IconBadge--warning"
    style={
      Object {
        "--iconBadge-background-color": null,
        "--iconBadge-border-color": null,
        "--iconBadge-border-style": null,
        "--iconBadge-border-width": null,
      }
    }
  >
    <svg
      fill="var(--color-grey-900)"
      height="14"
      viewBox="0 0 4 14"
      width="4"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="2"
        cy="1.25"
        r="1.25"
        transform="rotate(-180 2 1.25)"
      />
      <rect
        height="9"
        rx="1.25"
        transform="rotate(-180 3.25 13.5)"
        width="2.5"
        x="3.25"
        y="13.5"
      />
    </svg>
  </span>
  <div
    className="k-Alert__text"
  >
    Alert !
  </div>
</div>
`;
